creaciony ajuste de los ultmos endpint mas la creacion de la base de datos sql que contiene los roles usarios y permisos segun rol capa de seguridad para no aceder al sistema de forma externa y incriptacon
