# app/Http/Controllers/Api/AuthController.php
@@ -1,0 +1,60 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use App\Models\Usuario;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Validation\ValidationException;
+
+class AuthController extends Controller
+{
+    /**
+     * @OA\Post(
+     *      path="/api/v1/login",
+     *      operationId="login",
+     *      tags={"Auth"},
+     *      summary="Login to get API Token",
+     *      description="Returns API Token",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"email","password"},
+     *              @OA\Property(property="email", type="string", format="email", example="admin@example.com"),
+     *              @OA\Property(property="password", type="string", example="password")
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="token", type="string")
+     *          )
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Invalid credentials"
+     *      )
+     * )
+     */
+    public function login(Request $request)
+    {
+        $request->validate([
+            'email' => 'required|email',
+            'password' => 'required',
+        ]);
+
+        $user = Usuario::where('USUARIO', $request->email)->first();
+
+        if (!$user || !Hash::check($request->password, $user->PASSWORD)) {
+            throw ValidationException::withMessages([
+                'email' => ['Las credenciales son incorrectas.'],
+            ]);
+        }
+
+        $token = $user->createToken('api-token')->plainTextToken;
+
+        return response()->json(['token' => $token]);
+    }
+}
